Not the Final version. Still working on this project

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -58,14 +58,13 @@
                 <EditText
                     android:id="@+id/editText_reset_email"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="48dp"
                     android:layout_marginTop="10dp"
                     android:hint="@string/enter_your_registered_email"
                     android:inputType="textEmailAddress"
                     android:padding="6dp"
                     android:textSize="16sp" />
             </com.google.android.material.textfield.TextInputLayout>
-
 
             <Button
                 android:id="@+id/button_password_reset"
